opam-version: "1.2"
name: "telegram"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/telegram"
doc: "https://vbmithr.github.io/telegram/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/telegram.git"
bug-reports: "https://github.com/vbmithr/telegram/issues"
tags: []
available: [ ocaml-version >= "4.01.0"]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "ocplib-json-typed"
]
depopts: [
  "cohttp"
  "async_ssl"
]
build:
[[ "ocaml" "pkg/pkg.ml" "build"
           "--pinned" "%{pinned}%" ]]
