opam-version: "1.2"
name: "telegram"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-telegram"
license: "ISC"
dev-repo: "https://github.com/ocaml-vbmithr/telegram.git"
bug-reports: "https://github.com/vbmithr/ocaml-telegram/issues"
tags: []
available: [ ocaml-version >= "4.03.0"]
depends: [
  "jbuilder" {build & >= "1.0+beta16"}
  "ocplib-json-typed" {>= "0.5"}
]
build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
